Bug 741130 - Attach XBL bindings for html:objects in nsElementSH::PostCreate. r=bz, r=jwein